버튼 기능 구현

--- a/Items.css
+++ b/Items.css
@@ -1,38 +1,27 @@
-.Itempage {
-  width: 1000px;
-  height: 300px;
-  z-index: 999;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: gray;
-  border: 2px solid black;
-  border-radius: 8px;
-  animation: fade-in 0.57s ease-in-out;
+.MainCommunity {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    width: 750px;
+  }
+  
+.Post {
+    margin-top: 35px;
+    margin-left: 30px;
+    width: 340px;
+    height: 250px;
+    border: 5px solid gray;
+    border-radius: 8px;
+  }
+/* .MainCommunity button{
+    margin-left: 30px;
+    border: 5px solid gray;
+    background-color: white;
+    cursor: pointer;
+} */
+.Post h2{
+  background-color: rosybrown;
+  margin: 0 0 0 0;
   text-align: center;
 }
-.close {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-
-
-@keyframes fade-in {
-  from {
-      opacity: 0;
-  }
-  to {
-      opacity: 1;
-  }
-}
-
-@keyframes fade-out {
-  from {
-  opacity: 1;
-  }
-  to {
-  opacity: 0;
-  }
-}
+  
